<resources>
    <string name="app_name">Skin Cancer Predeictor</string>
    <string name="buttonSelectPhoto">Select Photo</string>
    <string name="buttonTakePhoto">Start Camera</string>
    <string name="buttonDiagnose">Detect</string>
    <string name="defaultImage">Default image set now...</string>
    <string name="descriptionImage">View for displaying image</string>
    <string name="headdingtext">MAJOR PROJECT SKIN CANCER DETECTION APP</string>
    <string name="buttonreset">Reset</string>
</resources>